@@ -9,12 +9,10 @@ import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
-import java.net.http.HttpRequest;
+// import java.net.http.HttpRequest;
 import java.nio.file.Path;
 import javax.servlet.annotation.MultipartConfig;
-
-import java.io.IOException;
-import java.io.PrintWriter;
+import java.util.ArrayList;
 import java.lang.reflect.Method;
 import java.util.HashMap;
 import java.util.Vector;
@@ -25,7 +23,7 @@ import javax.servlet.*;
 import javax.servlet.http.*;
 import javax.swing.text.Utilities;
 
-import org.jcp.xml.dsig.internal.dom.Utilitaireils;
+//import org.jcp.xml.dsig.internal.dom.Utilitaireils;
 
 import javax.servlet.annotation.WebServlet;
 
@@ -34,7 +32,7 @@ import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
 
-import annotation.Annotation;
+// import annotation.Annotation;
 import etu1758.framework.*;
 
 import java.util.Map;
@@ -42,7 +40,7 @@ import java.util.List;
 import utilitaire.Url;
 import utilitaire.ModelView;
 import utilitaire.Utilitaire;
-import Model.*;
+
 /**
  *
  * @author mahery
@@ -52,6 +50,7 @@ import Model.*;
 public class Frontservlet extends HttpServlet {
     HashMap<String, Mapping> mappingUrls;
     String nomDePackage;
+    HashMap<Class, Object> singletons = new HashMap<>();
     protected void processRequest(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         response.setContentType("text/html;charset=UTF-8");
@@ -62,17 +61,30 @@ public class Frontservlet extends HttpServlet {
 
             
             Mapping map = this.getMapping(request);
-            Object obj = Class.forName(map.getClassName()).newInstance();
+            Class classe = Class.forName(map.getClassName());
+
+            System.out.println(classe + " classe " + getSingletons().size());
+            Object obj = null;
+            if(this.getSingletons().containsKey(classe)){
+                obj = this.getSingletons().get(classe);
+                revenirANull(obj);
+                System.out.println("PAS BESOIN DE NOUVELLE INSTANCE");
+            }else{
+                obj = classe.getDeclaredConstructor().newInstance();
+                System.out.println("VRAIMENT BESOIN DE NOUVELLE INSTANCE");
+            }
+            System.out.println(obj + " ADRESSEE");
             sendData(request, obj);
 
             Method method = getMethod(map, obj);
             ModelView modelView = (ModelView) getModelView(request, map, obj);
-            addData(request, modelView);
-            RequestDispatcher dispat = request.getRequestDispatcher(modelView.getVueRedirection());
 
-            System.out.println(modelView.getVueRedirection() + " VUE DE REDIRECTION");
-
-            dispat.forward(request, response);
+                addData(request, modelView);
+                RequestDispatcher dispat = request.getRequestDispatcher(modelView.getVueRedirection());
+    
+                System.out.println(modelView.getVueRedirection() + " VUE DE REDIRECTION");
+    
+                dispat.forward(request, response);
 
         } catch (Exception e) {
             out.println(e.getMessage() + "\n");
@@ -83,7 +95,6 @@ public class Frontservlet extends HttpServlet {
     public void addData(HttpServletRequest request, ModelView modelView) {
         Map<String, String[]> donneesJSP;
         if (request.getParameterMap() != null && !request.getParameterMap().isEmpty()) {
-            System.out.println("NILA ARGUMENTS");
             donneesJSP = request.getParameterMap();
 
             // out.println(donneesJSP.toString() + " donneesJSP");
@@ -93,7 +104,6 @@ public class Frontservlet extends HttpServlet {
                 modelView.addItem(parameterName, donneesJSP.get(parameterName)[0]);
             }
         } else {
-            System.out.println("TSY NILA ARGUMENTS");
         }
         for (Map.Entry<String, Object> obj : modelView.getData().entrySet()) {
             request.setAttribute(obj.getKey(), obj.getValue());
@@ -107,16 +117,26 @@ public class Frontservlet extends HttpServlet {
             String value = field.getName();
             if(multiPartFormDataContentType(request)){
             if (value != null) {
-                    System.out.println("TSY NULLLL" + value + " ITOO" + obj.getClass());
                     if(field.getType().getSimpleName().equalsIgnoreCase("FileUpload") == true){
-                        System.out.println("THERE IS A FILE TO UPLOAD");
                         try {
                             System.out.println("THERE IS A FILE TO UPLOAD TAFIDITRAAAAAAAAAAAA");
                             Part filePart=request.getPart(value);
                             FileUpload upload=new FileUpload();
                             upload.setFileName(filePart.getSubmittedFileName()); 
                             InputStream inputStream = filePart.getInputStream();
-                            upload.setData(inputStream.readAllBytes());
+                            // upload.setData(inputStream.readAllBytes());
+
+                            ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+                            int nRead;
+                            byte[] data = new byte[1024];
+                            while ((nRead = inputStream.read(data, 0, data.length)) != -1) {
+                                buffer.write(data, 0, nRead);
+                            }
+                            buffer.flush();
+                            byte[] byteArray = buffer.toByteArray();
+                            upload.setData(byteArray);
+
+                            
                             System.out.println(upload.getData());
                             Class<?> clazz = obj.getClass();
                             // Retrieve the PathUploadClass annotation from the class
@@ -131,7 +151,6 @@ public class Frontservlet extends HttpServlet {
                             throw new Exception("Verifier si vous avez bien télécharger quelque chose");
                         }
                     }else{
-                        System.out.println("THIS IS NOT A FILE TO UPLOAD" + value);
                         String valeur = request.getParameter(field.getName());
                         Class castValue = (Class<?>) field.getType();
                         field.set(obj, Utilitaire.cast(valeur, castValue));
@@ -141,6 +160,50 @@ public class Frontservlet extends HttpServlet {
         }
     }
 
+    public void revenirANull(Object object) {
+        try {
+            Field[] fields = object.getClass().getDeclaredFields();
+            Object objectNull = new Object();
+            
+            for (Field field : fields) {
+                // Obtenir le nom du champ
+                String fieldName = field.getName();
+                
+                // Convertir le nom du champ en nom de méthode de setter
+                String setterName = "set" + fieldName.substring(0, 1).toUpperCase() + fieldName.substring(1);
+                System.out.println(setterName + " SETTERNAME");
+                // Obtenir le type du champ
+                Class<?> fieldType = field.getType();
+                List<Class<?>> nonNullableTypes = typesNonNullables();
+                for (int i = 0; i < nonNullableTypes.size(); i++) {
+                    if(fieldType.toString().equalsIgnoreCase(nonNullableTypes.get(i).toString()))
+                    System.out.println("NON NULLABLE" + fieldType);
+                }
+                objectNull = null;
+                // Obtenir la méthode de setter correspondante
+                Method setterMethod = object.getClass().getMethod(setterName, fieldType);
+                System.out.println(setterMethod + " SETTERMETHOD");
+                // Appeler le setter avec la valeur null
+                
+                setterMethod.invoke(object, objectNull);
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+    public List<Class<?>> typesNonNullables(){
+        List<Class<?>> nonNullableTypes = new ArrayList<>();
+        nonNullableTypes.add(boolean.class);
+        nonNullableTypes.add(byte.class);
+        nonNullableTypes.add(short.class);
+        nonNullableTypes.add(int.class);
+        nonNullableTypes.add(long.class);
+        nonNullableTypes.add(float.class);
+        nonNullableTypes.add(double.class);
+        nonNullableTypes.add(char.class);
+        return nonNullableTypes;
+    }
 public static boolean multiPartFormDataContentType(HttpServletRequest request){
     String contentType = request.getContentType();
     if(contentType != null && contentType.startsWith("multipart/form-data")){
@@ -187,7 +250,6 @@ public static boolean multiPartFormDataContentType(HttpServletRequest request){
             Class typeArguments = parameters[i].getType();
             // Avadika string le valeur an le paramètre tany am le méthode
             String value = request.getParameter(listeArguments[i]);
-            System.out.println(typeArguments + " parameters[i].getClass().getSimpleName()parameters[i].getClass().getSimpleName()");
             // Avadika ho le type originaleny amzay le izy aveo
             argumentsDeMethode[i] = Utilitaire.cast(value, typeArguments);
         }
@@ -210,9 +272,19 @@ public static boolean multiPartFormDataContentType(HttpServletRequest request){
 
     public void init() throws ServletException {
         this.setNomDePackage(this.getInitParameter("packageDeScan"));
+        HashMap hash = new HashMap<Class,Object>();
         try {
             System.out.println(this.getNomDePackage() + " nom de package");
             setMappingUrls(Utilitaire.getMethodesAnnotees(this.getNomDePackage(), Url.class));
+            List<Class<?>> classes = Utilitaire.getLesClasses(this.getNomDePackage());
+            for (Class<?> class1 : classes) {
+                Annotation annotation = class1.getAnnotation(Scope.class);
+                    if(annotation != null){
+                        System.out.println(class1 + " ANNOTERRR SCOPPEE");
+                        Object obj = class1.getDeclaredConstructor().newInstance();
+                        singletons.put(class1, obj);
+                    }
+            }
         } catch (ClassNotFoundException ex) {
             Logger.getLogger(Frontservlet.class.getName()).log(Level.SEVERE, null, ex);
         } catch (IOException ex) {
@@ -221,6 +293,8 @@ public static boolean multiPartFormDataContentType(HttpServletRequest request){
             Logger.getLogger(Frontservlet.class.getName()).log(Level.SEVERE, null, ex);
         }
     }
+
+    
 
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
@@ -246,6 +320,14 @@ public static boolean multiPartFormDataContentType(HttpServletRequest request){
 
     public void setNomDePackage(String nomDePackage) {
         this.nomDePackage = nomDePackage;
+    }
+
+    public HashMap<Class, Object> getSingletons() {
+        return singletons;
+    }
+
+    public void setSingletons(HashMap<Class, Object> singletons) {
+        this.singletons = singletons;
     }
 
 }
